k8s-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-service-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: blog-service
  template:
    metadata:
      labels:
        app: blog-service
    spec:
      containers:
        - name: blog-service
          image: springbootcontainerreg.azurecr.io/blog-service:latest
          ports:
            - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: blog-service
spec:
  type: NodePort
  selector:
    app: blog-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
