ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-example
spec:
  rules:
  - host: "www.pg.com"
    http:
      paths:
      - pathType: Prefix
        path: "/product"
        backend:
          service:
            name: product
            port:
              number: 9077
  - host: "www.foo.com"
    http:
      paths:
      - pathType: Prefix
        path: "/blog"
        backend:
          service:
            name: blog-service
            port:
              number: 80
